--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "verkstad-frontend-ok",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "npx vite",
+    "build": "npx vite build",
+    "preview": "npx vite preview"
   },
   "dependencies": {
     "lucide-react": "^0.509.0",
